seeqt/QtMultimedia/gen_qmediametadata.h

class QMediaMetaData;
class QVariant;
typedef struct QMediaMetaData QMediaMetaData;
typedef struct QVariant QVariant;
QMediaMetaData* QMediaMetaData_new(QMediaMetaData* param1);
QMediaMetaData* QMediaMetaData_new2();
QVariant* QMediaMetaData_value(const QMediaMetaData* self, int k);
void QMediaMetaData_insert(QMediaMetaData* self, int k, QVariant* value);
void QMediaMetaData_remove(QMediaMetaData* self, int k);
struct miqt_array /* of int */  QMediaMetaData_keys(const QMediaMetaData* self);
QVariant* QMediaMetaData_operatorSubscript(QMediaMetaData* self, int k);
void QMediaMetaData_clear(QMediaMetaData* self);
bool QMediaMetaData_isEmpty(const QMediaMetaData* self);
struct miqt_string QMediaMetaData_stringValue(const QMediaMetaData* self, int k);
struct miqt_string QMediaMetaData_metaDataKeyToString(int k);
void QMediaMetaData_delete(QMediaMetaData* self);